--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 	"license": "GPL-3.0",
 	"author": "harpreetkhalsagtbit@gmail.com",
 	"type": "commonjs",
-	"main": "./lib/cjs/index.js",
-	"types": "./lib/index.d.ts",
+	"main": "./src/index.ts",
+	"types": "./src/index.d.ts",
 	"directories": {
 		"lib": "lib"
 	},
